Fix footer to bottom of page, fix overlap with content

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2,7 +2,8 @@
 
 body {
     background-color: #332a33;
-    color: #fff
+    color: #fff;
+    margin-bottom: 100px;
 }
 
 .links-light {
@@ -175,6 +176,13 @@ body {
 
 /* Footer styles */
 
+footer {
+position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+}
+
 .bg-footer {
     padding: 1rem;
     background-color: #CC9ECC;
@@ -192,7 +200,7 @@ body {
 
 /* MEDIA QUERIES */
 
-/* Media query: 459px and larger */
+/* Media query: 474px and larger */
 @media screen and (min-width: 459px) {
     .contact-footer {
         margin-top: auto;
